--- a/index.html
+++ b/index.html
@@ -140,16 +140,17 @@
 <section id="contacto">
     <h3 class="titulo-seccion">Contactanos ahora</h3>
     <div class="contenedor-form">
-        <form action="">
+        <form action="https://formspree.io/f/mzboozkl" 
+        method="POST">
             <div class="fila mitad">
-                <input type="text" placeholder="Nombre Completo *" class="input-mitad">
-                <input type="email" placeholder="Dirección de Email" class="input-mitad">
+                <input type="text" name="name" placeholder="Nombre Completo *" class="input-mitad">
+                <input type="email" name="email" placeholder="Dirección de Email" class="input-mitad">
             </div>
             <div class="fila">
-                <input type="text" placeholder="Tema..." class="input-full">
+                <input type="text" name="subject" placeholder="Tema..." class="input-full">
             </div>
             <div class="fila">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Tu Mensaje..." class="input-full"></textarea>
+                <textarea name="message" id="" cols="30" rows="10" placeholder="Tu Mensaje..." class="input-full"></textarea>
             </div>
 
             <input type="submit" value="Enviar Mensaje" class="btn-enviar">
