--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <span>SOBRE MI</span>
                     <h3>Desarrollador Web</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi expedita blanditiis, rerum mollitia, et, rem labore quibusdam deleniti nostrum unde deserunt esse odio ullam architecto neque harum similique laboriosam cupiditate!</p>
-                    <a href="" class="btn-descargar">Descargar CV</a>
+                    <!-- <a download href="#" class="btn-descargar">Descargar CV</a> -->
                 </div>
             </div>
         </div>
@@ -93,11 +93,11 @@
                     <span>PORFOLIO</span>
                     <h3>Mis Trabajos</h3>
                 </div>
-                <div class="right" id="categorias">
+                <!-- <div class="right" id="categorias">
                     <a href="javascript:void(0)" class="activada">Todos</a>
                     <a href="javascript:void(0)" >Diseño</a>
                     <a href="javascript:void(0)" >Branding</a>
-                </div>
+                </div> -->
             </div>
             <div class="galeria" id="galeria">
                 <div class="proyecto final">
